Form changes 1 Playbook changes 1

--- a/src/playbook/tasks/supervisor/supervisor.j2
+++ b/src/playbook/tasks/supervisor/supervisor.j2
@@ -1,4 +1,7 @@
 [program:site]
+file=/var/run/supervisor.sock
+chmod=0700
+chown=appuser:supervisor
 process_name=%(program_name)s%(process_num)02d
 directory=/var/www/test2022-frontend-rostyslav-m.abzdev2.com/current/
 command=npm run start
@@ -10,4 +13,3 @@ stopasgroup=true
 stopsignal=QUIT
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/next.log
-environment=SITE_URL="https://test2022-frontend-rostyslav-m.abzdev2.com/" ,NEXTAUTH_URL="https://test2022-frontend-rostyslav-m.abzdev2.com/" ,GOOGLE_CLIENT_ID="____.apps.googleusercontent.com" ,GOOGLE_CLIENT_SECRET="__" ,FACEBOOK_CLIENT_ID="" ,FACEBOOK_CLIENT_SECRET="
