--- a/src/playbook/tasks/supervisor/supervisor.j2
+++ b/src/playbook/tasks/supervisor/supervisor.j2
@@ -1,10 +1,13 @@
 [program:site]
-file=/var/run/supervisor.sock
-process_name=%(program_name)s%(process_num)02d
 directory=/var/www/test2022-frontend-rostyslav-m.abzdev2.com/current/
-command=npm run start
 autostart=true
 autorestart=true
-numprocs=1
+startretries=1
+startsecs=1
 redirect_stderr=true
-stdout_logfile=/var/log/supervisor/next.log
+stderr_logfile=/var/log/supervisor/next-err.log
+stdout_logfile=/var/log/supervisor/next-out.log
+user=root
+stopsignal=QUIT
+killasgroup=true
+stopasgroup=true
