--- a/src/templates/site.conf.j2
+++ b/src/templates/site.conf.j2
@@ -8,23 +8,16 @@ server {
   server_name test2022-frontend-rostyslav-m.abzdev2.com www.test2022-frontend-rostyslav-m.abzdev2.com;
   root /var/www/test2022-frontend-rostyslav-m.abzdev2.com/current/public;
 
+        error_log /var/log/nginx/test2022-frontend-rostyslav-m.abzdev2.com.error.log;
+        access_log /var/log/nginx/test2022-frontend-rostyslav-m.abzdev2.com.log;
+
 
   location / {
       proxy_pass http://localhost:3000;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header Host $http_host;
-
+      proxy_set_header Host $host;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
-
-      add_header "X-XSS-Protection" "1; mode=block";
-      add_header X-Frame-Options SAMEORIGIN always;
-      add_header X-Content-Type-Options: nosniff;
-      add_header "Strict-Transport-Security" "max-age=63072000; includeSubDomains; preload";
-       try_files $uri $uri/ =404;
-      }
-
+    }
 
 }
