--- a/src/Components/Form/FormCss.css
+++ b/src/Components/Form/FormCss.css
@@ -1,6 +1,7 @@
 .header{
     height: 100px;
     width: 100%;
+    min-width: 320px;
     background: #E0E0E0;
     border: none;
     border-radius: 0px;
